# messenger_imitator

./: CMakeLists.txt  main.cpp  noted.md
functions/: functions.cpp  functions.h
messanger/: Messanger.h  Messenger.h  messenger.cpp
messanger/message/: Message.cpp  Message.h
messanger/user/: User.h  user.cpp
server/: Server.cpp  Server.h
